--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -5,9 +5,9 @@ description: |
   reading what we have to say!
 author:
   - name: Hao Liang 
-    url: https://example.com/norajones
+    url: https://coogle.ink/
     affiliation: Hunan University of Chinese Medicine
-    affiliation_url: https://example.com/spacelysprokets
+    affiliation_url: https://www.hnucm.edu.cn
 date: 02-14-2021
 output:
   distill::distill_article:
