--- a/_posts/2021-03-14-Apriori/Apriori.Rmd
+++ b/_posts/2021-03-14-Apriori/Apriori.Rmd
@@ -10,6 +10,9 @@ output:
   distill::distill_article:
     self_contained: false
     toc: yes
+categories:
+  - Digital Chinese medicine
+  - R tips
     
 ---
 
