--- a/about.Rmd
+++ b/about.Rmd
@@ -35,7 +35,7 @@ Chinese Medicine, Cardiology and Geriatric medicine.
 
 July 2013 
 
-  - lecturer (Institute of TCM Diagnostics), Hunan University of Chinese Medicine: Changsha, Hunan, CN
+  - Sennior lecturer (Institute of TCM Diagnostics), Hunan University of Chinese Medicine: Changsha, Hunan, CN
 
 ## Grants
 
