--- a/_posts/2022-05-22-tongueeating/tongueeating.Rmd
+++ b/_posts/2022-05-22-tongueeating/tongueeating.Rmd
@@ -14,13 +14,11 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-library(DT)
+
 ```
 
-DT包
-```{r}
-datatable(iris)
-```
-
+测试中
+详见
+https://medai.vip/tongue
 
 
